Implement key chapter modifications and create new data persistence chapter
Co-authored-by: shinyay <3072734+shinyay@users.noreply.github.com>